--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
               <a class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white" href="https://www.creative-tim.com/learning-lab/tailwindcss-starter-project#/presentation">
                 <!-- Nav Title -->
-                Creative Tim
+                Sage Concepts
               </a>
               <!-- Hamburger Menu (Mobile) -->
               <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">
@@ -70,7 +70,7 @@
       <!-- Background Image -->
       <div
         class="absolute top-0 w-full h-full bg-center bg-cover"
-        style="">
+        style="background-image: url(images/office.jpeg)">
         <!-- Overlay -->
         <span id="blackOverlay" class="w-full h-full absolute opacity-75 bg-black"></span>
       </div>
@@ -198,7 +198,7 @@
               <!-- Image -->
               <img
                 alt="..."
-                src=""
+                src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8b2ZmaWNlfGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=800&q=60"
                 class="w-full align-middle rounded-t-lg"
               />
               <blockquote class="relative p-8 mb-4">
@@ -260,7 +260,7 @@
             <img
               alt="..."
               class="max-w-full rounded-lg shadow-lg"
-              src=""
+              src="https://images.unsplash.com/photo-1631624215749-b10b3dd7bca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHNvZnR3YXJlfGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=800&q=60"
             />
           </div>
           <!-- Text Box Container-->
@@ -351,12 +351,12 @@
               <!-- Image -->
               <img
                 alt="..."
-                src=""               
+                src="https://randomuser.me/api/portraits/men/86.jpg"               
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
-                <h5 class="text-xl font-bold">Ryan Thompson</h5>
+                <h5 class="text-xl font-bold">Raj Hadid</h5>
                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                   Web Developer
                 </p>
@@ -384,12 +384,12 @@
               <!-- Image -->
               <img
                 alt="..."
-                src=""
+                src="https://randomuser.me/api/portraits/women/2.jpg"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
-                <h5 class="text-xl font-bold">Romina Hadid</h5>
+                <h5 class="text-xl font-bold">Sunny Lim</h5>
                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                   Marketing Specialist
                 </p>
@@ -413,12 +413,12 @@
               <!-- Image -->
               <img
                 alt="..."
-                src=""
+                src="https://randomuser.me/api/portraits/men/71.jpg"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
-                <h5 class="text-xl font-bold">Alexa Smith</h5>
+                <h5 class="text-xl font-bold">Alex Smith</h5>
                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                   UI/UX Designer
                 </p>
@@ -446,7 +446,7 @@
               <!-- Image -->
               <img
                 alt="..."
-                src=""
+                src="https://randomuser.me/api/portraits/women/65.jpg"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
